doc/lua54 syntax.ebnf
    chunk ::= block

    block ::= {stat} [retstat]

    stat ::=  `;` | 
		varlist `=` explist | 
		functioncall | 
		label | 
		break | 
		goto Name | 
		do block end | 
		while exp do block end | 
		repeat block until exp | 
		if exp then block {elseif exp then block} [else block] end | 
		for Name `=` exp `,` exp [`,` exp] do block end | 
		for namelist in explist do block end | 
		function funcname funcbody | 
		local function Name funcbody | 
		local attnamelist [`=` explist]

	attnamelist ::=  Name attr {`,` Name attr }

	attr ::= [`<` Name `>`]

	retstat ::= return [explist] [`;`]

	label ::= `::` Name `::`

	funcname ::= Name {`.` Name} [`:` Name]

	varlist ::= var {`,` var}

	var ::=  Name | prefixexp `[` exp `]` | prefixexp `.` Name 

	namelist ::= Name {`,` Name}

	explist ::= exp {`,` exp}

	exp ::=  nil | 
		false | 
		true | 
		Numeral | 
		LiteralString | 
		`...` | 
		functiondef | 
		prefixexp | 
		tablector | 
		exp binop exp | 
		unop exp 

	prefixexp ::= var | functioncall | `(` exp `)`

	functioncall ::=  prefixexp args | prefixexp `:` Name args 

	args ::=  `(` [explist] `)` | tablector | LiteralString 

	functiondef ::= function funcbody

	funcbody ::= `(` [paralist] `)` block end

	paralist ::= namelist [`,` `...`] | `...`

	tablector ::= `{` [fieldlist] `}`

	fieldlist ::= field {fieldsep field} [fieldsep]

	field ::= `[` exp `]` `=` exp | Name `=` exp | exp

	fieldsep ::= `,` | `;` 

	binop ::=  `+` | `-` | `*` | `/` | `//` | `^` | `%` | 
		`&` | `~` | `|` | `>>` | `<<` | `..` | 
		`<` | `<=` | `>` | `>=` | `==` | `~=` | 
		and | or

	unop ::= `-` | not | `#` | `~`
